--- a/src/components/Translation.css
+++ b/src/components/Translation.css
@@ -27,6 +27,11 @@
   justify-content: center;
 }
 
+.output-placeholder {
+  font-size: 20px;
+  color: blue;
+}
+
 .footer-container {
   display: flex;
   justify-content: center;
